--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
-   "python.linting.pylintEnabled": false,
-   "python.linting.enabled": true,
+   "python.linting.pylintEnabled": true,
+   "python.linting.enabled": false,
    "python.linting.pycodestyleEnabled": false,
-   "python.linting.flake8Enabled": true,
+   "python.linting.flake8Enabled": false,
    "python.terminal.activateEnvironment": false,
-   "python.formatting.autopep8Path": "/home/gitpod/.pyenv/shims/autopep8",
    "python.linting.flake8Path": "/home/gitpod/.pyenv/shims/flake8",
    "cornflakes.linter.executablePath": "/home/gitpod/.pyenv/shims/flake8",
    "files.exclude": {
@@ -23,5 +22,5 @@
    "workbench.colorTheme": "Default Dark+",
    "editor.defaultFormatter": "HookyQR.beautify",
    "editor.formatOnSave": true,
-   "python.formatting.provider": "black"
+   "python.linting.mypyEnabled": false
 }
