Add validate_choice function that gives the user 2 options to choose from and validates their input

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,7 @@
    "workbench.colorTheme": "Default Dark+",
    "editor.defaultFormatter": "HookyQR.beautify",
    "editor.formatOnSave": true,
-   "python.linting.mypyEnabled": false
+   "python.linting.mypyEnabled": false,
+   "editor.wordWrap": "wordWrapColumn",
+   "diffEditor.wordWrap": "on"
 }
